<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Blackmail</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="intro_dialogue">Take an embarrassing photo of yourself</string>
    <string name="photo_confirmation">Now it\'s time to choose the number to send this photo to should you not make it to your appointment</string>
    <string name="choose_hum_type">Where would you like this picture posted should you not make it to your appointment?</string>
    <string name="take_pic_instructions">Take an embarrassing picture of yourself</string>
    <string name="phone_instructions_1">Give us a phone number</string>
    <string name="phone_instructions_2">Specifically someone who you do not want to see that picture</string>
    <string name="map_instructions">Drag and zoom the map so that the red square covers the appointment location</string>
    <string name="submit_appt_btn">CREATE</string>
    <string name="checkin_btn">CHECK IN</string>
    <string name="datepicker">Select Date</string>
    <string name="timepicker">Select Time</string>
    <string name="facebook_btn">Facebook</string>
    <string name="google_btn">Google+</string>
    <string name="text_btn">Text Message</string>
    <string name="take_pic_btn">Okay</string>
    <string name="title_activity_temp">Temp</string>
    <string name="drawer_close">Close the menu</string>
    <string name="drawer_open">Open the menu</string>
    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_add">Add Appointment</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_about">About</string>
    <string name="btn_login">Log in</string>
    <string name="btn_register">Sign Up</string>
    <string name="signup_addAClass">Add a Class</string>
    <string name="signup_addAClassSub">Track the time and location of your lectures.</string>
    <string name="signup_attendClass">Attend</string>
    <string name="signup_attendClassSub">Check in to let us know that you\'ve made it on time.</string>
    <string name="signup_saveYourRep">Save Your Reputation</string>
    <string name="signup_saveYourRepSub">Miss class and an embarrassing photo of you will be posted to Facebook.</string>
    <string name="settings_photo_label">Embarrassing photo</string>
    <string name="settings_phone_num_label">Phone number to be sent to</string>
    <string name="app_explanation">Blackmail encourages users to arrive at their appointments on time by blackmailing them with an embarrassing photo.</string>
    <string name="warning">Warning:</string>
    <string name="filler_title">Title</string>
    <string name="filler_button">Click Me</string>
    <string name="filler_p">Lorem ipsum sans limier this is some long filler title that will probably wrap to two lines</string>
    <string name="app_warning">The embarrassing photo, phone number, and appointments are stored in the cloud. So no matter if the application is uninstalled, the photo will be sent if the user does not check in to their appointment on time.</string>
    <string name="facebook_app_id">1552481061662122</string>
    <string-array name="drawer_items">
        <item>Home</item>
        <item>Add Appointment</item>
        <item>Settings</item>
        <item>About</item>
    </string-array>

</resources>
