<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:paddingLeft="0dp"
        android:paddingRight="20dp"
        android:background="@color/DodgerBlue">
        <ImageButton
            android:layout_width="40dp"
            android:layout_height="fill_parent"
            android:paddingLeft="0dp"
            android:id="@+id/back_btn"
            android:src="@drawable/ic_action_back"
            android:background="@drawable/titlebar_button" />
        <ImageView
            android:layout_width="40dp"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:layout_marginRight="5dp"
            android:src="@drawable/blackmail_icon7"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="6"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:gravity="center_vertical"
            android:textSize="25dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:padding="20dp"
        android:layout_gravity="center"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="left"
            android:padding="20dp"
            android:background="@color/blue_focused"
            android:text="@string/app_explanation"
            android:layout_marginBottom="20dp"
            android:textSize="17dp"
            android:layout_weight="2"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="20dp"
            android:background="@color/blue_focused"
               android:layout_weight="2"
            android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="left"
            android:textColor="@color/red"
            android:text="@string/warning"
            android:textSize="20dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="left"
            android:padding="10dp"
            android:text="@string/app_warning"
            android:textSize="15dp"
            android:layout_weight="2"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>